aws-k8s/backend-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: three-tier-app
  labels:
    app: three-tier-app-bk
spec:
  selector:
    matchLabels:
      app: three-tier-app-bk
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: three-tier-app-bk
    spec:
      containers:
      - name: three-tier-app-backend
        image: <ECR-IMAGE-URI>
        resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 1000m
              memory: 2048Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        ports:
        - containerPort: 5000
          name:  backend-port
      restartPolicy: Always
