aws-k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: three-tier-app
spec:
  selector:
    app: three-tier-app-fr
  type: ClusterIP
  ports:
  - name: frontend-service-port
    protocol: TCP
    port: 80
    targetPort: 80
