aws-k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: three-tier-app
spec:
  selector:
    app: three-tier-app-gw
  type: ClusterIP
  ports:
  - name: gateway-service-port
    protocol: TCP
    port: 80
    targetPort: 80
